--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<h1>Movie Favorites</h1>
+<h1>Worksheet 4</h1>
 <h2>S00251601 - Kyle Flynn</h2>
-<ul>
-  <li *ngFor="let movie of movies">
-    {{ movie.title }} ({{ movie.year }}) - Directed by {{ movie.director }}
-  </li>
-</ul>
+<div class="container">
+  <h1>Movie Favourites</h1>
+  <app-add-movie></app-add-movie>
+  <app-list-movies></app-list-movies>
+</div>
